@@ -19,4 +19,7 @@
 	<string id="30017">Česká</string>
 	<string id="30018">Slovenská</string>
 	<string id="30019">Živě</string>
+	<string id="30020">Kvalita %s není dostupná - přehrává se %s</string>
+	<string id="30021">Video (ještě) není dostupné</string>
+	<string id="30022">144</string>
 </strings>
