@@ -19,4 +19,7 @@
 	<string id="30017">Czech</string>
 	<string id="30018">Slovak</string>
 	<string id="30019">Live</string>
+	<string id="30020">Quality %s not available - playing %s</string>
+	<string id="30021">Video not (yet) available</string>
+	<string id="30022">144</string>
 </strings>
