@@ -19,4 +19,7 @@
 	<string id="30017">Česká</string>
 	<string id="30018">Slovenská</string>
 	<string id="30019">Naživo</string>
+	<string id="30020">Kvalita %s nedostupná - prehráva sa %s</string>
+	<string id="30021">Video (ešte) nie je dostupné</string>
+	<string id="30022">144</string>
 </strings>
