@@ -1,3 +1,7 @@
+2020-03-30 [0.0.11]
+  * Added Live stream support
+  * Fixed quality selection
+  * Added notifications for unavailable video and unmet quality restriction
 2019-12-09 [0.0.10]
   * Fixed UTF-8 encoded URLs
 2019-10-05 [0.0.9]
